--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.16",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "typeorm": "^0.3.23",
+    "typeorm-ts-node-commonjs": "^0.3.20",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.15.6",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.23"
+    "reflect-metadata": "^0.2.2"
   }
 }
